--- a/sdk/examples/CMakeLists.txt
+++ b/sdk/examples/CMakeLists.txt
@@ -39,5 +39,7 @@ add_custom_target("examples")
 # add all examples below
 add_subdirectory(hello)
 add_subdirectory(hello-native)
+add_subdirectory(getpeername)
+add_subdirectory(getcwd)
 add_subdirectory(attestation)
 add_subdirectory(tests)
