--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
 	url = https://github.com/buildroot/buildroot.git
 [submodule "linux"]
 	path = linux
-	url = https://github.com/torvalds/linux
+	url = https://git.kernel.org/pub/scm/linux/kernel/git/stable/linux.git
 [submodule "qemu"]
 	path = qemu
 	url = https://github.com/qemu/qemu
